[gd_scene load_steps=10 format=2]

[ext_resource path="res://Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://Deck.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 0.27451 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109391, 0.150592, 0.160156, 1 )
border_width_bottom = 1
border_color = Color( 0.447059, 0.486275, 0.486275, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.109391, 0.150592, 0.160156, 1 )
border_width_bottom = 1
border_color = Color( 0.52549, 0.564706, 0.564706, 1 )
border_blend = true
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.109391, 0.150592, 0.160156, 1 )
border_width_bottom = 1
border_color = Color( 0.690196, 0.729412, 0.729412, 1 )
border_blend = true
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.109391, 0.150592, 0.160156, 1 )
border_width_bottom = 1
border_blend = true
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.109391, 0.150592, 0.160156, 1 )
border_width_bottom = 1
border_blend = true
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.109391, 0.150592, 0.160156, 1 )
border_width_bottom = 1
border_blend = true
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Deck" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -260.0
margin_bottom = -492.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmptyDeck" type="Panel" parent="."]
margin_right = 100.0
margin_bottom = 130.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pile0" type="Panel" parent="."]
margin_left = 2.0
margin_top = 121.0
margin_right = 98.0
margin_bottom = 147.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pile1" type="Panel" parent="."]
margin_left = 2.0
margin_top = 118.0
margin_right = 98.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 103.82, 32.2529 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pile2" type="Panel" parent="."]
margin_left = 2.0
margin_top = 115.0
margin_right = 98.0
margin_bottom = 141.0
rect_pivot_offset = Vector2( 103.82, 32.2529 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pile3" type="Panel" parent="."]
margin_left = 2.0
margin_top = 112.0
margin_right = 98.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 103.82, 32.2529 )
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pile4" type="Panel" parent="."]
margin_left = 2.0
margin_top = 109.0
margin_right = 98.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( 103.82, 32.2529 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pile5" type="Panel" parent="."]
margin_left = 2.0
margin_top = 106.0
margin_right = 98.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 103.82, 32.2529 )
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopDeck" parent="." instance=ExtResource( 1 )]
